Fix: Scale down advanced filters on smaller devices

--- a/src/pages/AdvancedFiltersPage/AdvancedFilters.scss
+++ b/src/pages/AdvancedFiltersPage/AdvancedFilters.scss
@@ -27,3 +27,10 @@
     animation-delay: 1.25s;
   }
 }
+
+@media (max-width: 768px) {
+  .page-content__image {
+    transform: scale(0.8);
+    transform-origin: bottom center;
+  }
+}
