--- a/src/pages/ExportAndSharePage/ExportAndSharePage.scss
+++ b/src/pages/ExportAndSharePage/ExportAndSharePage.scss
@@ -27,7 +27,7 @@
 }
 
 .jpg {
-  animation-delay: 1.30s;
+  animation-delay: 1.3s;
   top: -25px;
 }
 
